--- a/Lanchat.Avalonia/Lanchat.Avalonia.csproj
+++ b/Lanchat.Avalonia/Lanchat.Avalonia.csproj
@@ -5,9 +5,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="0.10.7"/>
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.7"/>
+        <PackageReference Include="Avalonia" Version="0.10.7" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.10.7" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.7"/>
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.7" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Lanchat.ClientCore\Lanchat.ClientCore.csproj" />
+      <ProjectReference Include="..\Lanchat.Core\Lanchat.Core.csproj" />
     </ItemGroup>
 </Project>
